--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".features.tomaasistencia.ActivityTomaAsistencia"></activity>
+        <activity
+            android:name=".features.mainbar.BarActivity"
+            android:label="@string/title_activity_bar"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".features.tomaasistencia.ActivityTomaAsistencia" />
         <activity android:name=".features.perfil.ActivityPerfil" />
-        <activity android:name=".features.cursos.ActivityCursos" />
+        <activity android:name=".features.cursos.CursosActivity" />
         <activity android:name=".features.agenda.AgendaActivity" />
         <activity android:name=".features.login.LoginActivity">
             <intent-filter>
